--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,11 +4,9 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-
   <listener>
     <listener-class>oop.controller.Initializer</listener-class>
   </listener>
-  
   <servlet>
     <description></description>
     <display-name>ActionController</display-name>
@@ -23,7 +21,6 @@
     <servlet-name>ActionController</servlet-name>
     <url-pattern>/action/*</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <description></description>
     <display-name>APIController</display-name>
@@ -34,7 +31,6 @@
     <servlet-name>APIController</servlet-name>
     <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <description></description>
     <display-name>ArticleController</display-name>
@@ -45,7 +41,6 @@
     <servlet-name>ArticleController</servlet-name>
     <url-pattern>/article/*</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <description></description>
     <servlet-name>REST Service</servlet-name>
@@ -60,5 +55,13 @@
     <servlet-name>REST Service</servlet-name>
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
-  
+  <filter>
+    <display-name>PrototypeMethodFilter</display-name>
+    <filter-name>PrototypeMethodFilter</filter-name>
+    <filter-class>oop.controller.PrototypeMethodFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>PrototypeMethodFilter</filter-name>
+    <url-pattern>/rest/*</url-pattern>
+  </filter-mapping>
 </web-app>
