--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -37,16 +37,6 @@
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>ArticleController</display-name>
-    <servlet-name>ArticleController</servlet-name>
-    <servlet-class>oop.controller.ArticleController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ArticleController</servlet-name>
-    <url-pattern>/article/*</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
     <servlet-name>REST Service</servlet-name>
     <servlet-class>oop.controller.RestController</servlet-class>
     <init-param>
@@ -62,7 +52,7 @@
   <filter>
     <display-name>PrototypeMethodFilter</display-name>
     <filter-name>PrototypeMethodFilter</filter-name>
-    <filter-class>oop.controller.PrototypeMethodFilter</filter-class>
+    <filter-class>oop.filter.PrototypeMethodFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>PrototypeMethodFilter</filter-name>
@@ -78,4 +68,13 @@
     <servlet-name>SetupServlet</servlet-name>
     <url-pattern>/setup</url-pattern>
   </servlet-mapping>
+  <filter>
+    <display-name>url-rewrite</display-name>
+    <filter-name>url-rewrite</filter-name>
+    <filter-class>oop.filter.UrlRewritingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>url-rewrite</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
