--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -38,7 +38,7 @@
   <servlet>
     <description></description>
     <servlet-name>REST Service</servlet-name>
-    <servlet-class>oop.controller.RestController</servlet-class>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
       <param-value>oop.controller.rest</param-value>
@@ -50,12 +50,12 @@
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
   <filter>
-    <display-name>PrototypeMethodFilter</display-name>
-    <filter-name>PrototypeMethodFilter</filter-name>
-    <filter-class>oop.filter.PrototypeMethodFilter</filter-class>
+    <display-name>rest-filter</display-name>
+    <filter-name>rest-filter</filter-name>
+    <filter-class>oop.filter.RestFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>PrototypeMethodFilter</filter-name>
+    <filter-name>rest-filter</filter-name>
     <url-pattern>/rest/*</url-pattern>
   </filter-mapping>
   <servlet>
