--- a/src/hibernate.properties
+++ b/src/hibernate.properties
@@ -1,1 +1,5 @@
 hibernate.format_sql=true
+hibernate.c3p0.min_size=5
+hibernate.c3p0.max_size=40
+hibernate.c3p0.timeout=1800
+hibernate.c3p0.max_statements=100
