--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -77,4 +77,13 @@
     <filter-name>url-rewrite</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <filter>
+    <display-name>FacebookFilter</display-name>
+    <filter-name>FacebookFilter</filter-name>
+    <filter-class>oop.filter.FacebookFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>FacebookFilter</filter-name>
+    <url-pattern>/FacebookFilter</url-pattern>
+  </filter-mapping>
 </web-app>
