--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -77,4 +77,7 @@
     <filter-name>url-rewrite</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <listener>
+    <listener-class>oop.controller.AutomaticLogin</listener-class>
+  </listener>
 </web-app>
