--- a/src/hibernate.properties
+++ b/src/hibernate.properties
@@ -3,3 +3,4 @@ hibernate.c3p0.min_size=5
 hibernate.c3p0.max_size=40
 hibernate.c3p0.timeout=1800
 hibernate.c3p0.max_statements=100
+hibernate.default_batch_fetch_size=20
