--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,6 +11,15 @@
   <listener>
     <listener-class>oop.controller.OcwikiApp</listener-class>
   </listener>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/errors/404.jsp</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/errors/500.jsp</location>
+  </error-page>
+  
   <servlet>
     <description></description>
     <display-name>ActionController</display-name>
