--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,26 +11,18 @@
   <listener>
     <listener-class>oop.controller.OcwikiApp</listener-class>
   </listener>
-  
-  <!-- Error pages start -->
   <error-page>
     <error-code>404</error-code>
-    <location>/errors/404.jsp</location>
-  </error-page>
-  <error-page>
-    <exception-type>oop.controller.ConfigIOException</exception-type>
-    <location>/errors/fail-to-load-config.jsp</location>
+    <location>/error/404</location>
   </error-page>
   <error-page>
     <exception-type>org.hibernate.exception.GenericJDBCException</exception-type>
-    <location>/errors/database-error.jsp</location>
+    <location>/error/database</location>
   </error-page>
   <error-page>
     <error-code>500</error-code>
-    <location>/errors/500.jsp</location>
+    <location>/error/500</location>
   </error-page>
-  <!-- Error pages end -->
-  
   <servlet>
     <description></description>
     <display-name>ActionController</display-name>
@@ -97,4 +89,14 @@
     <url-pattern>/article/*</url-pattern>
     <url-pattern>/user/*</url-pattern>
   </filter-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ErrorController</display-name>
+    <servlet-name>ErrorController</servlet-name>
+    <servlet-class>oop.controller.ErrorController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ErrorController</servlet-name>
+    <url-pattern>/error/*</url-pattern>
+  </servlet-mapping>
 </web-app>
