--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -14,6 +14,9 @@
   <listener>
     <listener-class>org.ocwiki.db.dao.stat.ResourceViewDAOInitializer</listener-class>
   </listener>
+  <listener>
+    <listener-class>org.ocwiki.db.dao.stat.SiteViewCounterInitializer</listener-class>
+  </listener>
   <error-page>
     <error-code>404</error-code>
     <location>/error/404</location>
